2018-04-23 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'SyGpioServer' that caused 'gpiReceived()' and
	'gpioReceived()' signals to be omitted when processing multicast
	updates containing multiple bit events.
2018-04-24 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library ABI version to 14:1:11.
	* Updated the package version to 0.18.1.
2018-09-21 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'SyGpioServer::gpioEvent(SyGpioBundleEvent *)' signal.
2018-09-21 Fred Gleason <fredg@paravelsystems.com>
	* Added support for the 'CFG GPO' command to 'SyLwrpServer'.
	* Added 'SyRouter::gpoName()' and 'SyRouter::setGpoName()' methods.
	* Added 'SyRouter::gpoAddress()' and 'SyRouter::setGpoAddress()'
	methods.
2018-09-23 Fred Gleason <fredg@paravelsystems.com>
	* Added ' SyLwrpClientConnection::gpiAdded()',
	' SyLwrpClientConnection::addGpi()', 'SyLwrpClientConnection::delGpi()'
	' SyLwrpClientConnection::addGpo()' and
	' SyLwrpClientConnection::delGpo()' methods.
	* Added 'SyLwrpServer::sendGpiState()' and
	'SyLwrpServer::sendGpoState()' methods.
	* Added 'SyGpioEvent::sourceAddress()' and
	'SyGpioBundleEvent::sourceAddress()' methods.
	* Added support for the 'ADD GPI', 'ADD GPO', 'DEL GPI' and 'DEL GPO'
	command to 'SyLwrpServer'.
	* Removed the 'SyRouting::gpiState()' and 'SyRouting::gpoState()'
	methods.
	* Added 'SyRouting::setGpiBySlot()' and 'SyRouting::setGpoBySlot()'
	methods.
2018-09-26 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'SyLwrpServer::sendGpiState()' that failed to cache
	current GPI state.
	* Fixed a bug in 'SyLwrpServer::sendGpiState()' that caused a
	gratutious routing DB save every time GPO state was updated.
2018-10-13 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'SyGpioServer' that caused locally originated
	GPI events to be processed.
	* Added 'SyRouting::gpoMode()', 'SyRouting::setGpoMode()',
	'SyRouting::gpoSnakeSlot()' and 'SyRouting::setGpoSnakeSlot()'
	methods.